--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,15 @@
     <body>
         <%= render 'layouts/header' %>
 
-        <%= yield %>
+        <div class="container">
+          <% flash.each do |name, msg| %>
+              <%= content_tag(:div, msg, class: "asert alert-#{name}") %>
+              <% end %>
+            <%= yield %>
+            <%= render 'layouts/footer' %>
+        </div>
 
-        <%= render 'layouts/footer' %>
+
 
 
     </body>
