--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
       <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
       <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
       <%= csrf_meta_tags %>
+
     </head>
 
     <body>
@@ -12,7 +13,7 @@
 
         <div class="container">
           <% flash.each do |name, msg| %>
-              <%= content_tag(:div, msg, class: "asert alert-#{name}") %>
+              <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
               <% end %>
             <%= yield %>
             <%= render 'layouts/footer' %>
