--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,15 @@
-<h1>Welcome to One month rails</h1>
-<p>You've found the home page for the
-  <%= link_to "One month Rails", "http://onemonthrails.com" %>
-  application.
-</p>
-<p>
-  <%= link_to"Sign up now", "#" %>
-</p>
-
+<% if user_signed_in? %>
+    <h1>You are logged in</h1>
+<% else %>
+    <div class="hero-unit">
+        <h1>Welcome to One month rails</h1>
+        <p>
+          You've found the home page for the
+          <%= link_to "One month Rails", "http://onemonthrails.com" %>
+          application.
+        </p>
+        <p>
+          <%= link_to"Sign up now", new_user_registration_path, class: "btn btn-primary btn-large" %>
+        </p>
+    </div>
+<% end %>
